--- a/FORMULARIO ENTREGA.HTML
+++ b/FORMULARIO ENTREGA.HTML
@@ -43,8 +43,8 @@
         <label for="privacidad"> Acepto las condiciones de privacidad </label>
         <input type="checkbox" value="privacidad" name="privacidad" id="privacidad" required>
         <br>
-        <input type="submit" value="ENVIAR">
-        <input type="reset" name="RESET">
+        <input id="boton" type="submit" value="ENVIAR">
+        <input id="boton" type="reset" name="RESET">
     </form>
     <div id="datos">
     </div>
