--- a/BOOSTRAP/Formulario con captcha.HTML
+++ b/BOOSTRAP/Formulario con captcha.HTML
@@ -33,13 +33,13 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/imagenes/la.jpg" alt="Los Angeles">
+            <img src="imagenes/la.jpg" alt="Los Angeles">
           </div>
           <div class="carousel-item">
-            <img src="/imagenes/chicago.jpg" alt="Chicago">
+            <img src="imagenes/chicago.jpg" alt="Chicago">
           </div>
           <div class="carousel-item">
-            <img src="/imagenes/ny.jpg" alt="New York">
+            <img src="imagenes/ny.jpg" alt="New York">
           </div>
         </div>
       
@@ -106,6 +106,7 @@
                     Submitform();
             });
         })
+        $('.carousel').carousel({interval: 300)}
     </script>
 </body>
 
